[package]
name = "pallet-object-store"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2021"
description = "Kumandra pallet for simple objects storage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.16", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }
kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../../primitives/core" }

[dev-dependencies]
serde = "1.0.136"
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "c4f3d028621edb293d2c423516221aa396f76a2d" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "log/std",
  "scale-info/std",
  "sp-std/std",
  "kumandra-core-primitives/std",
]
try-runtime = ["frame-support/try-runtime"]